Add header (logo, nav text), add site description and button Get in touch

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: Montserrat;
+  font-style: SemiBold;
+  font-weight: 200 700;
+  font-display: swap;
+  src: url("./assets/fonts/Montserrat-SemiBold.ttf") format("woff2");
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -21,10 +29,6 @@
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+
 }
